# aero-os

./: .dockerignore  .gitignore  README.md  UPDATE.md  aero-firstboot.swift  aero-lock.swift  aero-settings.swift  aero-store.swift  aero-update-manifest.json  aero-update-ui.swift  build_full_os_windows.cmd  build_full_os_windows.ps1  build_iso_windows.cmd  build_iso_windows.ps1  build_os.cmd  build_os.ps1  build_os.sh  catalog.json  main.swift  publish_iso.cmd  publish_iso.ps1  settings.css  style.css  write_usb.cmd  write_usb.ps1
bsdinstall/: installer.conf  partition.conf
config/: oauth-providers.json  oauth.conf.example  repos.conf  update.conf
docker/: Dockerfile  entrypoint.sh
foundation/: Cargo.toml  build-all.sh  build-kernel.sh
foundation/kernel/: Cargo.toml  build.rs
foundation/kernel/src/: brand.rs  desktop.rs  fat.rs  fb.rs  files.rs  fs.rs  handoff.rs  heap.rs  input.rs  kernel.rs  main.rs  mem.rs  ps2.rs  session.rs  setup.rs  store.rs  ui.rs
foundation/kernel/src/arch/: gdt.rs  idt.rs  mod.rs  pic.rs  pit.rs  port.rs
profile/: iso.conf  packages.amd64
releases/: DOWNLOADS.md  UPDATE.md  VMWARE-TEST.md  github-release-workflow.yml
scripts/: aero-updater.sh
src/: AeroPaths.swift  GtkBindings.swift  OAuthManager.swift  VersionEngine.swift
store/: README.md  aero-update-manifest.example.json  catalog.example.json  index.json
tools/: aero  aero-fetch-icon  aero-firstboot  aero-firstboot-gtk  aero-firstboot-lite  aero-lock  aero-lock-gtk  aero-lock-lite  aero-notify  aero-open  aero-settings  aero-settings-gtk  aero-settings-lite  aexes  (+18 more)
(+33 files in other folders)
